--- a/package.json
+++ b/package.json
@@ -2,15 +2,34 @@
   "name": "ngx-flip",
   "version": "0.0.0",
   "license": "MIT",
+  "author": "Ritesh Srivastava",
+  "description": "Simple Angualr based plug and play Flip component",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ritsrivastava01/ngxFlip.git"
+  },
+  "homepage": "https://github.com/ritsrivastava01/ngxFlip",
+  "bugs": {
+    "url": "https://github.com/ritsrivastava01/ngxFlip"
+  },
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular 2",
+    "angular4",
+    "angular Flip component",
+    "angular 2 Flip"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "packagr": "ng-packagr -p ng-package.json"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
@@ -22,6 +41,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "ng-packagr": "^1.6.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
