--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngxFlip": {
+    "ngxflip-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngxFlip",
+            "outputPath": "dist/ngxflip-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngxFlip:build"
+            "browserTarget": "ngxflip-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngxFlip:build:production"
+              "browserTarget": "ngxflip-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngxFlip:build"
+            "browserTarget": "ngxflip-app:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "ngxFlip-e2e": {
+    "ngxflip-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,11 +103,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngxFlip:serve"
+            "devServerTarget": "ngxflip-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngxFlip:serve:production"
+              "devServerTarget": "ngxflip-app:serve:production"
             }
           }
         },
@@ -121,7 +121,47 @@
           }
         }
       }
+    },
+    "ngxflip": {
+      "root": "projects/ngxflip",
+      "sourceRoot": "projects/ngxflip/src",
+      "projectType": "library",
+      "prefix": "ngx",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngxflip/tsconfig.lib.json",
+            "project": "projects/ngxflip/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/ngxflip/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngxflip/src/test.ts",
+            "tsConfig": "projects/ngxflip/tsconfig.spec.json",
+            "karmaConfig": "projects/ngxflip/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngxflip/tsconfig.lib.json",
+              "projects/ngxflip/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
-  "defaultProject": "ngxFlip"
+  "defaultProject": "ngxflip-app"
 }
