--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -14,6 +16,20 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "flip": [
+        "dist/flip"
+      ],
+      "flip/*": [
+        "dist/flip/*"
+      ],
+      "ngxflip": [
+        "dist/ngxflip"
+      ],
+      "ngxflip/*": [
+        "dist/ngxflip/*"
+      ]
+    }
   }
 }
