--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.1.2",
+    "@angular/cli": "^7.1.2",
     "@angular/common": "^7.1.2",
     "@angular/compiler": "^7.1.2",
     "@angular/core": "^7.1.2",
