--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ngxflip-app",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": ">= 10.13",
+    "npm": ">= 6.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,43 +20,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.2",
-    "@angular/cli": "^7.1.2",
-    "@angular/common": "^7.1.2",
-    "@angular/compiler": "^7.1.2",
-    "@angular/core": "^7.1.2",
-    "@angular/forms": "^7.1.2",
-    "@angular/http": "^7.1.2",
-    "@angular/platform-browser": "^7.1.2",
-    "@angular/platform-browser-dynamic": "^7.1.2",
-    "@angular/router": "^7.1.2",
-    "core-js": "^2.6.0",
-    "rxjs": "^6.3.3",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "^9.0.0",
+    "@angular/cli": "^9.0.1",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
+    "core-js": "^3.6.4",
+    "rxjs": "^6.5.4",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.2",
-    "@angular-devkit/build-ng-packagr": "~0.11.2",
-    "@angular/cli": "~7.1.2",
-    "@angular/compiler-cli": "^7.1.2",
-    "@angular/language-service": "^7.1.2",
-    "@types/jasmine": "~3.3.1",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~10.12.12",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~3.3.0",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-ng-packagr": "~0.900.1",
+    "@angular/cli": "~9.0.1",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
+    "@types/jasmine": "~3.5.3",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~13.7.1",
+    "codelyzer": "~5.2.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.3",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^4.4.5",
-    "protractor": "~5.4.1",
-    "ts-node": "~7.0.1",
-    "tsickle": "^0.34.0",
-    "tslib": "^1.9.3",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "ng-packagr": "^9.0.0",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.6.2",
+    "tsickle": "^0.38.0",
+    "tslib": "^1.10.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.7.5"
   }
 }
